--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Roboto, system-ui, Arial, Helvetica, sans-serif;
+  font-family: Lato, Roboto, system-ui, Arial, Helvetica, sans-serif;
 }
 
 @layer base {
